test/fail/issue-3585b.mo
import O = "issue-3585/Object";

actor {
}
